Stor omskriving. Alle tester brukes felles Familie objeket for instansiering at testpersoner, innsedning av søknad, oppbygging og innsending av inntektsmelding.